# japan-real-estate-data-retriever

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  README.zh-CN.md  pyproject.toml
.agents/skills/japan-real-estate-data-retriever/: SKILL.md
.agents/skills/japan-real-estate-data-retriever/references/: site-yahoo-japan.md  unified-fields.md
examples/: query.shibuya-google-rent-2ldk.json  query.tokyo-condo.json
schemas/: query.schema.json  unified_listing.schema.json
skills/japan-real-estate-data-retriever/: SKILL.md
skills/japan-real-estate-data-retriever/agents/: openai.yaml
skills/japan-real-estate-data-retriever/references/: cloud-probe-findings-2026-04-26.md  cloud-search-detail-probe-findings-2026-04-26.md  overall-workflow.md  search-filter-capabilities.md  site-athome.md  site-homes.md  site-suumo.md  source-id-strategy.md
src/japan_real_estate_data_retriever/: __init__.py  cli.py  cloud_client.py  local_cli.py  normalizer.py  paths.py  prompt_builder.py  schema_loader.py  sites.py
tests/: test_cli.py  test_cloud_client.py  test_json_schema.py  test_local_cli.py  test_normalizer.py  test_prompt_builder.py
