[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "japan-real-estate-data-retriever"
version = "0.1.0"
description = "Browser Use workflows for structured Japanese real estate listing retrieval."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
jreretrieve = "japan_real_estate_data_retriever.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
